rust/tests/snapshots/test_from_file__afiro.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: afiro.mps
sense: Minimize
objectives:
  - name: OBJ1
    coefficients:
      - name: X02
        value: -0.4
      - name: X14
        value: -0.32
      - name: X23
        value: -0.6
      - name: X36
        value: -0.48
      - name: X39
        value: 10
    constant: 0
  - name: OBJ2
    coefficients:
      - name: X03
        value: 1
      - name: X06
        value: 2.5
      - name: X08
        value: -5
    constant: 0
  - name: OBJ3
    coefficients:
      - name: X03
        value: -10.4
      - name: X07
        value: -2.5
      - name: X10
        value: 2.1
    constant: 0
constraints:
  - type: Standard
    name: R09
    coefficients:
      - name: X01
        value: -1
      - name: X02
        value: 1
      - name: X03
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R10
    coefficients:
      - name: X01
        value: -1.06
      - name: X04
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R12
    coefficients:
      - name: X06
        value: -1
      - name: X07
        value: -1
      - name: X08
        value: -1
      - name: X09
        value: -1
      - name: X14
        value: 1
      - name: X15
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R13
    coefficients:
      - name: X06
        value: -1.06
      - name: X07
        value: -1.06
      - name: X08
        value: -0.96
      - name: X09
        value: -0.86
      - name: X16
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R19
    coefficients:
      - name: X22
        value: -1
      - name: X23
        value: 1
      - name: X24
        value: 1
      - name: X25
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R20
    coefficients:
      - name: X22
        value: -0.43
      - name: X26
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R22
    coefficients:
      - name: X28
        value: -0.43
      - name: X29
        value: -0.43
      - name: X30
        value: -0.39
      - name: X31
        value: -0.37
      - name: X38
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: R23
    coefficients:
      - name: X28
        value: 1
      - name: X29
        value: 1
      - name: X30
        value: 1
      - name: X31
        value: 1
      - name: X36
        value: -1
      - name: X37
        value: 1
      - name: X39
        value: 1
    operator: EQ
    rhs: 44
  - type: Standard
    name: X05
    coefficients:
      - name: X01
        value: 1
    operator: LTE
    rhs: 80
  - type: Standard
    name: X17
    coefficients:
      - name: X06
        value: 1
      - name: X10
        value: -1
    operator: LTE
    rhs: 80
  - type: Standard
    name: X18
    coefficients:
      - name: X07
        value: 1
      - name: X11
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X19
    coefficients:
      - name: X08
        value: 1
      - name: X12
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X20
    coefficients:
      - name: X09
        value: 1
      - name: X13
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X21
    coefficients:
      - name: X02
        value: -1
      - name: X14
        value: 1.4
    operator: LTE
    rhs: 0
  - type: Standard
    name: X27
    coefficients:
      - name: X22
        value: 1
    operator: LTE
    rhs: 500
  - type: Standard
    name: X40
    coefficients:
      - name: X28
        value: 1
      - name: X32
        value: -1
    operator: LTE
    rhs: 500
  - type: Standard
    name: X41
    coefficients:
      - name: X29
        value: 1
      - name: X33
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X42
    coefficients:
      - name: X30
        value: 1
      - name: X34
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X43
    coefficients:
      - name: X31
        value: 1
      - name: X35
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X44
    coefficients:
      - name: X23
        value: -1
      - name: X36
        value: 1.4
    operator: LTE
    rhs: 0
  - type: Standard
    name: X45
    coefficients:
      - name: X10
        value: 2.364
      - name: X11
        value: 2.386
      - name: X12
        value: 2.408
      - name: X13
        value: 2.429
      - name: X25
        value: -1
      - name: X32
        value: 2.191
      - name: X33
        value: 2.219
      - name: X34
        value: 2.249
      - name: X35
        value: 2.279
    operator: LTE
    rhs: 0
  - type: Standard
    name: X46
    coefficients:
      - name: X03
        value: -1
      - name: X22
        value: 0.109
    operator: LTE
    rhs: 0
  - type: Standard
    name: X47
    coefficients:
      - name: X15
        value: -1
      - name: X28
        value: 0.109
      - name: X29
        value: 0.108
      - name: X30
        value: 0.108
      - name: X31
        value: 0.107
    operator: LTE
    rhs: 0
  - type: Standard
    name: X48
    coefficients:
      - name: X01
        value: 0.301
      - name: X24
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X49
    coefficients:
      - name: X06
        value: 0.301
      - name: X07
        value: 0.313
      - name: X08
        value: 0.313
      - name: X09
        value: 0.326
      - name: X37
        value: -1
    operator: LTE
    rhs: 0
  - type: Standard
    name: X50
    coefficients:
      - name: X04
        value: 1
      - name: X26
        value: 1
    operator: LTE
    rhs: 310
  - type: Standard
    name: X51
    coefficients:
      - name: X16
        value: 1
      - name: X38
        value: 1
    operator: LTE
    rhs: 300
variables:
  - name: X01
    var_type: Free
  - name: X02
    var_type: Free
  - name: X03
    var_type: Free
  - name: X04
    var_type: Free
  - name: X06
    var_type: Free
  - name: X07
    var_type: Free
  - name: X08
    var_type: Free
  - name: X09
    var_type: Free
  - name: X10
    var_type: Free
  - name: X11
    var_type: Free
  - name: X12
    var_type: Free
  - name: X13
    var_type: Free
  - name: X14
    var_type: Free
  - name: X15
    var_type: Free
  - name: X16
    var_type: Free
  - name: X22
    var_type: Free
  - name: X23
    var_type: Free
  - name: X24
    var_type: Free
  - name: X25
    var_type: Free
  - name: X26
    var_type: Free
  - name: X28
    var_type: Free
  - name: X29
    var_type: Free
  - name: X30
    var_type: Free
  - name: X31
    var_type: Free
  - name: X32
    var_type: Free
  - name: X33
    var_type: Free
  - name: X34
    var_type: Free
  - name: X35
    var_type: Free
  - name: X36
    var_type: Free
  - name: X37
    var_type: Free
  - name: X38
    var_type: Free
  - name: X39
    var_type: Free
