rust/tests/snapshots/test_from_file__complex_names.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: total_cost_2025
    coefficients:
      - name: Production_A_1
        value: 100
      - name: Production_B_2
        value: 200
      - name: Transport_X_Y
        value: 150
      - name: Storage_Facility_1
        value: 300
    constant: 0
constraints:
  - type: Standard
    name: Capacity_Constraint_1
    coefficients:
      - name: Production_A_1
        value: 1
      - name: Production_B_2
        value: 1
    operator: LTE
    rhs: 500
  - type: Standard
    name: Demand_Region_X
    coefficients:
      - name: Transport_X_Y
        value: 1
      - name: Storage_Facility_1
        value: 1
    operator: GTE
    rhs: 200
variables:
  - name: Production_A_1
    var_type:
      DoubleBound:
        - 0
        - 300
  - name: Production_B_2
    var_type:
      DoubleBound:
        - 0
        - 400
  - name: Storage_Facility_1
    var_type:
      DoubleBound:
        - 0
        - 1000
  - name: Transport_X_Y
    var_type:
      DoubleBound:
        - 0
        - inf
