rust/tests/snapshots/test_from_file__computer_plant_problem.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: Computer_Plant_Problem
sense: Minimize
objectives:
  - name: Total_Costs
    coefficients:
      - name: BuildaPlant_Denver
        value: 70000
      - name: BuildaPlant_Los_Angeles
        value: 70000
      - name: BuildaPlant_Phoenix
        value: 65000
      - name: BuildaPlant_San_Francisco
        value: 70000
      - name: Route_Denver_Barstow
        value: 8
      - name: Route_Denver_Dallas
        value: 5
      - name: Route_Denver_San_Diego
        value: 9
      - name: Route_Denver_Tucson
        value: 6
      - name: Route_Los_Angeles_Barstow
        value: 7
      - name: Route_Los_Angeles_Dallas
        value: 10
      - name: Route_Los_Angeles_San_Diego
        value: 4
      - name: Route_Los_Angeles_Tucson
        value: 8
      - name: Route_Phoenix_Barstow
        value: 5
      - name: Route_Phoenix_Dallas
        value: 8
      - name: Route_Phoenix_San_Diego
        value: 6
      - name: Route_Phoenix_Tucson
        value: 3
      - name: Route_San_Francisco_Barstow
        value: 3
      - name: Route_San_Francisco_Dallas
        value: 6
      - name: Route_San_Francisco_San_Diego
        value: 5
      - name: Route_San_Francisco_Tucson
        value: 2
    constant: 0
constraints:
  - type: Standard
    name: Sum_of_Products_into_Stores_Barstow
    coefficients:
      - name: Route_Denver_Barstow
        value: 1
      - name: Route_Los_Angeles_Barstow
        value: 1
      - name: Route_Phoenix_Barstow
        value: 1
      - name: Route_San_Francisco_Barstow
        value: 1
    operator: GTE
    rhs: 1000
  - type: Standard
    name: Sum_of_Products_into_Stores_Dallas
    coefficients:
      - name: Route_Denver_Dallas
        value: 1
      - name: Route_Los_Angeles_Dallas
        value: 1
      - name: Route_Phoenix_Dallas
        value: 1
      - name: Route_San_Francisco_Dallas
        value: 1
    operator: GTE
    rhs: 1200
  - type: Standard
    name: Sum_of_Products_into_Stores_San_Diego
    coefficients:
      - name: Route_Denver_San_Diego
        value: 1
      - name: Route_Los_Angeles_San_Diego
        value: 1
      - name: Route_Phoenix_San_Diego
        value: 1
      - name: Route_San_Francisco_San_Diego
        value: 1
    operator: GTE
    rhs: 1700
  - type: Standard
    name: Sum_of_Products_into_Stores_Tucson
    coefficients:
      - name: Route_Denver_Tucson
        value: 1
      - name: Route_Los_Angeles_Tucson
        value: 1
      - name: Route_Phoenix_Tucson
        value: 1
      - name: Route_San_Francisco_Tucson
        value: 1
    operator: GTE
    rhs: 1500
  - type: Standard
    name: Sum_of_Products_out_of_Plant_Denver
    coefficients:
      - name: BuildaPlant_Denver
        value: -2000
      - name: Route_Denver_Barstow
        value: 1
      - name: Route_Denver_Dallas
        value: 1
      - name: Route_Denver_San_Diego
        value: 1
      - name: Route_Denver_Tucson
        value: 1
    operator: LTE
    rhs: 0
  - type: Standard
    name: Sum_of_Products_out_of_Plant_Los_Angeles
    coefficients:
      - name: BuildaPlant_Los_Angeles
        value: -2000
      - name: Route_Los_Angeles_Barstow
        value: 1
      - name: Route_Los_Angeles_Dallas
        value: 1
      - name: Route_Los_Angeles_San_Diego
        value: 1
      - name: Route_Los_Angeles_Tucson
        value: 1
    operator: LTE
    rhs: 0
  - type: Standard
    name: Sum_of_Products_out_of_Plant_Phoenix
    coefficients:
      - name: BuildaPlant_Phoenix
        value: -1700
      - name: Route_Phoenix_Barstow
        value: 1
      - name: Route_Phoenix_Dallas
        value: 1
      - name: Route_Phoenix_San_Diego
        value: 1
      - name: Route_Phoenix_Tucson
        value: 1
    operator: LTE
    rhs: 0
  - type: Standard
    name: Sum_of_Products_out_of_Plant_San_Francisco
    coefficients:
      - name: BuildaPlant_San_Francisco
        value: -1700
      - name: Route_San_Francisco_Barstow
        value: 1
      - name: Route_San_Francisco_Dallas
        value: 1
      - name: Route_San_Francisco_San_Diego
        value: 1
      - name: Route_San_Francisco_Tucson
        value: 1
    operator: LTE
    rhs: 0
variables:
  - name: BuildaPlant_Denver
    var_type: Binary
  - name: BuildaPlant_Los_Angeles
    var_type: Binary
  - name: BuildaPlant_Phoenix
    var_type: Binary
  - name: BuildaPlant_San_Francisco
    var_type: Binary
  - name: Route_Denver_Barstow
    var_type:
      LowerBound: 0
  - name: Route_Denver_Dallas
    var_type:
      LowerBound: 0
  - name: Route_Denver_San_Diego
    var_type:
      LowerBound: 0
  - name: Route_Denver_Tucson
    var_type:
      LowerBound: 0
  - name: Route_Los_Angeles_Barstow
    var_type:
      LowerBound: 0
  - name: Route_Los_Angeles_Dallas
    var_type:
      LowerBound: 0
  - name: Route_Los_Angeles_San_Diego
    var_type:
      LowerBound: 0
  - name: Route_Los_Angeles_Tucson
    var_type:
      LowerBound: 0
  - name: Route_Phoenix_Barstow
    var_type:
      LowerBound: 0
  - name: Route_Phoenix_Dallas
    var_type:
      LowerBound: 0
  - name: Route_Phoenix_San_Diego
    var_type:
      LowerBound: 0
  - name: Route_Phoenix_Tucson
    var_type:
      LowerBound: 0
  - name: Route_San_Francisco_Barstow
    var_type:
      LowerBound: 0
  - name: Route_San_Francisco_Dallas
    var_type:
      LowerBound: 0
  - name: Route_San_Francisco_San_Diego
    var_type:
      LowerBound: 0
  - name: Route_San_Francisco_Tucson
    var_type:
      LowerBound: 0
