rust/tests/snapshots/test_from_file__copy.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: classroomAssignmentSP
sense: Maximize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 1
      - name: sdfdf5343
        value: 1
    constant: 0
constraints:
  - type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 1
    operator: LTE
    rhs: 1
  - type: Standard
    name: c2
    coefficients:
      - name: x2
        value: -3.01
      - name: x3
        value: 6
    operator: EQ
    rhs: 1
  - type: Standard
    name: c2b
    coefficients:
      - name: x2x3x4
        value: -3.0000000002
    operator: EQ
    rhs: 1
  - type: Standard
    name: c3
    coefficients:
      - name: x2
        value: 1
    operator: GT
    rhs: 1
variables:
  - name: qwer
    kind: Continuous
    bounds:
      lower: -inf
      upper: inf
  - name: sdfdf5343
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: sdfdfdf
    kind: General
    bounds:
      lower: ~
      upper: ~
  - name: that
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: this
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x1
    kind: Continuous
    bounds:
      lower: -inf
      upper: inf
  - name: x2
    kind: Continuous
    bounds:
      lower: 1
      upper: ~
  - name: x2dfsdf
    kind: Continuous
    bounds:
      lower: 100
      upper: -1
  - name: x2x3x4
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x3
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x4
    kind: General
    bounds:
      lower: ~
      upper: ~
  - name: x6
    kind: General
    bounds:
      lower: ~
      upper: ~
