rust/tests/snapshots/test_from_file__cplex.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Maximize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 1
      - name: x2
        value: 2
      - name: x3
        value: 3
      - name: x4
        value: 1
    constant: 0
constraints:
  - type: Standard
    name: c1
    coefficients:
      - name: x1
        value: -1
      - name: x2
        value: 1
      - name: x3
        value: 1
      - name: x4
        value: 10
    operator: LTE
    rhs: 20
  - type: Standard
    name: c2
    coefficients:
      - name: x1
        value: 1
      - name: x2
        value: -3
      - name: x3
        value: 1
    operator: LTE
    rhs: 30
  - type: Standard
    name: c3
    coefficients:
      - name: x2
        value: 1
      - name: x4
        value: -3.5
    operator: EQ
    rhs: 0
variables:
  - name: x1
    kind: Continuous
    bounds:
      lower: 0
      upper: 40
  - name: x2
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x3
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x4
    kind: General
    bounds:
      lower: 2
      upper: 3
